<resources>
    <string name="app_name">Practica 09 - Almacenamiento con SQLite</string>
    <string name="login_screen_title">Iniciar sesion</string>
    <string name="login_username_text_field">Nombre de usuario</string>
    <string name="login_password_text_field">Contraseña</string>
    <string name="save_password_checkbox_text">Guardar contraseña</string>
    <string name="login_button_text">Iniciar sesion</string>
    <string name="exit_button_text">Salir</string>
    <string name="login_username">login_username</string>
    <string name="login_password">login_password</string>
    <string name="save_login_data">save_login_data</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_add_park">Añadir nuevo parque</string>
    <string name="menu_parks_list">Parques</string>
    <string name="menu_add_ranger">Añadir nuevo guardabosques</string>
    <string name="menu_ranger_list">Guardabosques</string>
    <string name="new_park_title">Nuevo parque</string>
    <string name="park_name_input_hint">Nombre del parque</string>
    <string name="park_size_hint">Tamaño del parque (hectareas)</string>
    <string name="park_coordinates_long_hint">Longitud</string>
    <string name="park_coordinates_lat_hint">Latitud</string>
    <string name="register_park_button_text">Registrar</string>
    <string name="find_park_button_text">Buscar</string>
    <string name="edit_park_button_text">Editar</string>
    <string name="delete_park_button_text">Eliminar</string>
</resources>