<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.practica09_almacenamientoconsqlite.activities.ui.park_form.ParkFormFragment"
        android:label="@string/menu_add_park"
        tools:layout="@layout/fragment_park_form" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.practica09_almacenamientoconsqlite.activities.ui.parks_list.ParksListFragment"
        android:label="@string/menu_parks_list"
        tools:layout="@layout/fragment_park_list" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.practica09_almacenamientoconsqlite.activities.ui.ranger_form.RangerFormFragment"
        android:label="@string/menu_add_ranger"
        tools:layout="@layout/fragment_ranger_form" />

    <fragment
        android:id="@+id/nav_ranger_list_fragment"
        android:name="com.example.practica09_almacenamientoconsqlite.activities.ui.ranger_list.RangerListFragment"
        android:label="@string/menu_ranger_list"
        tools:layout="@layout/fragment_park_list" />

    <fragment
        android:id="@+id/nav_logout_fragment"
        android:name="com.example.practica09_almacenamientoconsqlite.activities.ui.logout.LogoutFragment"
        android:label="Cerrar sesion"
        tools:layout="@layout/fragment_logout" />
</navigation>